update example app

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>react-checkmark</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
   <div class="container">
